// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Virtualize getVirtualized itemHeight 40 1`] = `
Object {
  "beginHeight": 0,
  "endHeight": 3600,
  "virtualizedData": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
  ],
}
`;

exports[`Virtualize getVirtualized scrollTop 0 1`] = `
Object {
  "beginHeight": 0,
  "endHeight": 900,
  "virtualizedData": Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
    8,
    9,
  ],
}
`;

exports[`Virtualize getVirtualized scrollTop 100 1`] = `
Object {
  "beginHeight": 90,
  "endHeight": 810,
  "virtualizedData": Array [
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
  ],
}
`;

exports[`Virtualize getVirtualized scrollTop 900 1`] = `
Object {
  "beginHeight": 890,
  "endHeight": 10,
  "virtualizedData": Array [
    89,
    90,
    91,
    92,
    93,
    94,
    95,
    96,
    97,
    98,
  ],
}
`;

exports[`Virtualize getVirtualized with new row 1`] = `
Object {
  "beginHeight": 80,
  "endHeight": 810,
  "virtualizedData": Array [
    9,
    10,
    11,
    12,
    13,
    14,
    15,
    16,
    17,
    18,
  ],
}
`;
